fix whitespace overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body, html{
+    height: 100vh;
+    width: 100vw;
+}
 .hidden-spacer {
     height: 56px
 }
@@ -111,4 +115,7 @@ footer {
 
 .selector-for-some-widget {
     box-sizing: content-box;
+}
+.row-fluid{
+    width:100%;
 }
